--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <p class="action-description">Sign up for our product by clicking that button right over there!</p>
         </div>
         <div class="col">
-          <button>signup</button>
+          <button>SIGN UP</button>
         </div>
         </div>
 
